<resources>
    <string name="app_name">HackPay</string>
    <string name="action_settings">Settings</string>
    <string name="activity_qr_desc">QR코드를 스캔하여 결제하세요.</string>
    <string name="activity_qr_error">올바른 QR 코드가 아닙니다. 다시 스캔하세요.</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="dialog_payment_title">Payment Details</string>
    <string name="dialog_payment_method">Payment Method</string>
    <string name="total">Total</string>
    <string name="dialog_amount_details">Amount Details</string>
    <string name="result_complete">Payment Succeed</string>

    <!-- Strings related to login -->
    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호 </string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="submit_button">전송</string>
    <string name="error_invalid_email">아이디가 너무 짧습니다.</string>
    <string name="error_invalid_password">패스워드가 너무 짧습니다.</string>
    <string name="error_incorrect_password">패스워드가 일치하지 않습니다.</string>
    <string name="error_field_required">아이디를 입력하세요</string>
    <string name="error_network">네트워크 연결을 확인해주세요.</string>
    <string name="error_api_etc">서버 응답 오류</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="incorrect_pincode">Pin번호가 일치하지 않습니다.</string>
    <string name="reinput_pincode">한번 더 입력해주세요</string>
    <string name="action_product_add">상품 추가</string>
    <string name="activity_main_credits">잔액과 거래내역</string>
    <string name="activity_main_pay">지금 결제</string>
    <string name="credits_charge">충전</string>
    <string name="credits_refund">환급</string>
    <string name="payment_datetime">결제 시각</string>
    <string name="credits_before">현재 잔액</string>
    <string name="credits_after">충전 또는 환급 후 잔액</string>
    <string name="credits_charge_or_refund">충전 또는 환급</string>
    <string name="credits_charge_complete">충전 완료되었습니다.</string>
</resources>
